   obsproc_dump/sorc/bufr_dupcor.fd/dupcor.f
   obsproc_dump/sorc/bufr_dupcor.fd/makefile
   obsproc_dump/sorc/bufr_dupmar.fd/dupmar.f
   obsproc_dump/sorc/bufr_dupmar.fd/makefile
   obsproc_dump/sorc/bufr_dupmrg.fd/dupmrg.f
   obsproc_dump/sorc/bufr_dupmrg.fd/makefile
   obsproc_dump/sorc/bufr_duprad.fd/duprad.f
   obsproc_dump/sorc/bufr_duprad.fd/makefile
   obsproc_dump/sorc/bufr_dupsat.fd/dupsat.f
   obsproc_dump/sorc/bufr_dupsat.fd/makefile
   obsproc_dump/sorc/bufr_dupshp.fd/dupshp.f
   obsproc_dump/sorc/bufr_dupshp.fd/makefile
   obsproc_dump/sorc/bufr_dupsst.fd/dupsst.f
   obsproc_dump/sorc/bufr_dupsst.fd/makefile
   obsproc_dump/sorc/bufr_edtbfr.fd/edtbfr.f
   obsproc_dump/sorc/bufr_edtbfr.fd/makefile
   obsproc_dump/sorc/bufr_geofil.fd/geofil.f
   obsproc_dump/sorc/bufr_geofil.fd/makefile
   obsproc_dump/sorc/bufr_quipc.fd/makefile
   obsproc_dump/sorc/bufr_quipc.fd/quipc.f
   obsproc_dump/sorc/bufr_raddate.fd/makefile
   obsproc_dump/sorc/bufr_raddate.fd/raddate.f
   obsproc_dump/sorc/bufr_supertmi.fd/makefile
   obsproc_dump/sorc/bufr_supertmi.fd/supertmi.f
   obsproc_dump/sorc/prepobs_prepssmi.fd/makefile
   obsproc_dump/sorc/prepobs_prepssmi.fd/prepssmi.f
   obsproc_dump/sorc/wave_dcodquikscat.fd/dcodquikscat.f
   obsproc_dump/sorc/wave_dcodquikscat.fd/makefile
 M obsproc_dump/sorc/build.sh
   obsproc_dump/sorc/clean.sh
   obsproc_dump/sorc/install.sh
 A obsproc_dump/sorc/clobber.sh
 M obsproc_dump/sorc/load_libs.rc
   obsproc_dump/sorc/README.build
   obsproc_dump/sorc/setlibs.rc
   obsproc_dump/ush/bufr_dump_obs.sh
   obsproc_dump/ush/check_tanks.sh
 M obsproc_dump/ush/dumpjb

( A - added,  M - modified, D - deleted)


 USH script changes:
   dumpjb:
     - Updated to run on Dell-p3 systems as well as Cray-XC40 & IBM iDataPlex.
     - added logic to detect Dell-p3 system and initialize Modules
     - disabled exact matching of Dell-p3 module versions (LMOD_EXACT_MATCH=no)
     - added default value for TMPDIR on Dell-p3 systems