@@ -1,45 +1,45 @@
 C$$$  MAIN PROGRAM DOCUMENTATION BLOCK
 C
 C MAIN PROGRAM: BUFR_DUPSAT
-C   PRGMMR: KEYSER           ORG: NP22        DATE: 2015-06-30
+C   PRGMMR: KEYSER           ORG: NP22        DATE: 2018-03-28
 C
 C ABSTRACT: PROCESSES SATELLITE DATABASE REPORTS WITH (OPTIONAL)
 C   GEOGRAPHICAL FILTERING, DUPLICATE CHECKING, (OPTIONAL) TRIMMING
 C   TO EXACT TIME WINDOW (DAY DOWN TO SECOND) AND CORRECTING OF
 C   LONGITUDE TO BUFR STANDARD (I.E., CHANGE 0 --> 360 E TO
 C   -180 --> +180, E+,W-) (IF NECESSARY).  AN UPDATED REPORT ID
-C   (MNEMONIC "RPID") IS ALSO GENERATED FOR DERIVED WINDS FROM GOES,
-C   METEOSAT, INSAT, KALPANA, GMS, MTSAT, HIMAWARI, AQUA/TERRA (POES),
-C   NOAA/METOP (POES), NPP (GOES) AND NESDIS RETRIEVALS AND PROCESSED
-C   RADIANCES FROM GOES. OTHER RPT TYPES (WHICH GET ONLY DUP CHECKING,
-C   OPTIONAL GEOGRAPHICAL FILTERING, OPTIONAL TIME WINDOW TRIMMING AND
-C   POSSIBLE LONGITUDE CORRECTION) INCLUDE NESDIS RETRIEVALS AND
-C   PROCESSED RADIANCES FROM TOVS, RTOVS, ATOVS AND AVHRR (INCLUDING 1B
-C   RADIANCES); AQUA/AIRS (CENTER, WARMEST AND EVERY F-O-V), AMSRE
-C   RADIANCES AND METOP/IASI RADIANCES; AND PRODUCTS AND RADIANCES FROM
-C   ERS, SSM/I, QUIKSCAT, WINDSAT, ASCAT, TRMM AND GPS.  THE ATOVS 1B
-C   RADIANCES ARE AVAILABLE VIA ORBITAL DOWNLOAD FROM THE SPACECRAFT,
-C   AS WELL AS FROM THE REGIONAL ATOVS RETRANSMISSION SERVICES (RARS)
-C   VIA DIRECT TRANSMISSION OF DATA TO A NETWORK OF GROUND STATIONS (IN
-C   NEAR REAL-TIME). FOR ALL TYPES EXCEPT SSM/I, THE ALGORITHM SORTS
-C   THE REPORTS IN ASCENDING ORDER OF LAT, LON AND OBS TIME (DAY DOWN
-C   TO SECOND); AND IN THE DUPLICATE CHECKING, REPORTS ARE CHECKED FOR
-C   LAT, LON AND OBS TIME (DAY DOWN TO SECOND) ALL INSIDE THE TOLERANCE
-C   LIMITS.  FOR SSM/I, LAT IS REPLACED BY ORBIT NUMBER AND LON IS
-C   REPLACED BY SCAN NUMBER IN BOTH THE SORTING AND DUPLICATE CHECKING
-C   STEPS (LONGITUDE IS STILL CORRECTED TO BUFR STANDARD IF NECESSARY).
-C   THE FILE PATH/NAMES OF THE INPUT AND OUTPUT FILES, (OPTIONALLY) THE
-C   TIME WINDOW TO TRIM TO AND (OPTIONALLY) DEFAULT OVERRIDE DUP
-C   CHECKING TOLERANCE LIMITS ARE READ FROM STANDARD INPUT AT THE START
-C   OF THIS PROGRAM.  IF THE TIME WINDOW RECORD IS MISSING, THEN NO
-C   TIME WINDOW TRIMMING IS PERFORMED.  THE GEOGRAPHICAL FILTERING
-C   PARAMETERS (EITHER A LAT/LON BOUNDARY, A CENTER POINT LAT/LON AND
-C   RADIUS OR A 0.5 DEGREE GLOBAL LAT/LON GRID POINT MASK FILE) ARE
-C   READ IN FROM THE SCRIPT ENVIRONMENT VARIABLE "LALO" VIA THE SYSTEM
-C   LIBRARY ROUTINE "GETENV" (IF "LALO" IS MISSING OR "0", GEOGRAPHICAL
-C   FILTERING IS NOT PERFORMED).  ALL FILE CONNECTIONS (EXCEPT STANDARD
-C   INPUT WHICH IS PRE-CONNECTED) ARE MADE THROUGH THE FORTRAN OPEN
-C   STATEMENT.
+C   (MNEMONIC "RPID") IS ALSO GENERATED FOR DERIVED WINDS FROM GOES-15 &
+C   DOWN, METEOSAT, INSAT, KALPANA, GMS, MTSAT, HIMAWARI, AQUA/TERRA
+C   (POES), NOAA/METOP (POES), NPP (POES) AND NESDIS RETRIEVALS AND
+C   PROCESSED RADIANCES FROM GOES. OTHER RPT TYPES (WHICH GET ONLY DUP
+C   CHECKING, OPTIONAL GEOGRAPHICAL FILTERING, OPTIONAL TIME WINDOW
+C   TRIMMING AND POSSIBLE LONGITUDE CORRECTION) INCLUDE NESDIS
+C   RETRIEVALS AND PROCESSED RADIANCES FROM TOVS, RTOVS, ATOVS AND AVHRR
+C   (INCLUDING 1B RADIANCES); AQUA/AIRS (CENTER, WARMEST AND EVERY
+C   F-O-V), AMSRE RADIANCES AND METOP/IASI RADIANCES; AND PRODUCTS AND
+C   RADIANCES FROM ERS, SSM/I, QUIKSCAT, WINDSAT, ASCAT, TRMM AND GPS.
+C   THE ATOVS 1B RADIANCES ARE AVAILABLE VIA ORBITAL DOWNLOAD FROM THE
+C   SPACECRAFT, AS WELL AS FROM THE REGIONAL ATOVS RETRANSMISSION
+C   SERVICES (RARS) VIA DIRECT TRANSMISSION OF DATA TO A NETWORK OF
+C   GROUND STATIONS (IN NEAR REAL-TIME). FOR ALL TYPES EXCEPT SSM/I, THE
+C   ALGORITHM SORTS THE REPORTS IN ASCENDING ORDER OF LAT, LON AND OBS
+C   TIME (DAY DOWN TO SECOND); AND IN THE DUPLICATE CHECKING, REPORTS
+C   ARE CHECKED FOR LAT, LON AND OBS TIME (DAY DOWN TO SECOND) ALL
+C   INSIDE THE TOLERANCE LIMITS.  FOR SSM/I, LAT IS REPLACED BY ORBIT
+C   NUMBER AND LON IS REPLACED BY SCAN NUMBER IN BOTH THE SORTING AND
+C   DUPLICATE CHECKING STEPS (LONGITUDE IS STILL CORRECTED TO BUFR
+C   STANDARD IF NECESSARY).  THE FILE PATH/NAMES OF THE INPUT AND OUTPUT
+C   FILES, (OPTIONALLY) THE TIME WINDOW TO TRIM TO AND (OPTIONALLY)
+C   DEFAULT OVERRIDE DUP CHECKING TOLERANCE LIMITS ARE READ FROM
+C   STANDARD INPUT AT THE START OF THIS PROGRAM.  IF THE TIME WINDOW
+C   RECORD IS MISSING, THEN NO TIME WINDOW TRIMMING IS PERFORMED.  THE
+C   GEOGRAPHICAL FILTERING PARAMETERS (EITHER A LAT/LON BOUNDARY, A
+C   CENTER POINT LAT/LON AND RADIUS OR A 0.5 DEGREE GLOBAL LAT/LON GRID
+C   POINT MASK FILE) ARE READ IN FROM THE SCRIPT ENVIRONMENT VARIABLE
+C   "LALO" VIA THE SYSTEM LIBRARY ROUTINE "GETENV" (IF "LALO" IS MISSING
+C   OR "0", GEOGRAPHICAL FILTERING IS NOT PERFORMED).  ALL FILE
+C   CONNECTIONS (EXCEPT STANDARD INPUT WHICH IS PRE-CONNECTED) ARE MADE
+C   THROUGH THE FORTRAN OPEN STATEMENT.
 C
 C PROGRAM HISTORY LOG:
 C 1996-09-06  J. WOOLLEN  ORIGINAL VERSION FOR IMPLEMENTATION
@@ -266,6 +266,9 @@ C        satellite.
 C 2015-06-30  D. Keyser  Fixed bug in code which failed to initialize a
 C        counting variable and led to incorrect print statements. It
 C        had no affect on answers.
+C 2018-03-28  D. Keyser  Changes to handle new GOES-16 & up satellite
+C        winds which do not contain a report id (RPID) - do not call
+C        subroutine SATWND_ID for these.
 C
 C USAGE:
 C   INPUT FILES:
@@ -435,10 +438,10 @@ C$$$
 
 C-----------------------------------------------------------------------
 C-----------------------------------------------------------------------
-      CALL W3TAGB('BUFR_DUPSAT',2015,0181,0062,'NP22')
+      CALL W3TAGB('BUFR_DUPSAT',2018,0087,0062,'NP22')
 
       print *
-      print * ,'---> Welcome to BUFR_DUPSAT - Version 06-30-2015'
+      print * ,'---> Welcome to BUFR_DUPSAT - Version 03-28-2018'
       print *
 
       CALL DATELEN(10)
@@ -1114,9 +1117,9 @@ C  --------------------------------------------------------------------
 C  SPECIAL BRANCHES FOR SOME DATA TYPES
 C  ------------------------------------
 
-      IF(SUBSET(1:5).EQ.'NC005')  THEN
+      IF(SUBSET(1:5).EQ.'NC005'.AND.SUBSET(6:7).NE.'03')  THEN
          CALL SATWND_ID(LUBFI,LUBFJ,JDUP,NDUP,JLON,NLON,LALO_8,
-     $                  LATLON_TYPE,ICOMP) ! Satellite winds
+     $                  LATLON_TYPE,ICOMP)!Satwnds (except GOES-16 & up)
       ELSEIF(SUBSET.EQ.'NC003001'.OR.SUBSET.EQ.'NC003002'.OR.
      $       SUBSET.EQ.'NC003003')  THEN
          CALL GOESND_ID(LUBFI,LUBFJ,JDUP,NDUP,JLON,NLON,LALO_8,
@@ -1358,7 +1361,8 @@ C ABSTRACT: PERFORMS DUPLICATE CHECKING AND (OPTIONAL) TRIMMING TO
 C   EXACT TIME WINDOW (DAY DOWN TO SECOND), AND THEN UPDATES THE REPORT
 C   ID AND LONGITUDE {ALREADY CORRECTED TO BUFR STANDARD
 C   (-180 --> +180, E+,W- INSTEAD OF 0 --> 360 E) IF NECESSARY} IN
-C   OUTPUT FILE FOR ALL SATELLITE-DERIVED WIND TYPES.
+C   OUTPUT FILE FOR ALL SATELLITE-DERIVED WIND TYPES EXCEPT FOR GOES-16
+C   AND UP.
 C
 C PROGRAM HISTORY LOG:
 C 2000-12-05  KEYSER -- ORIGINAL AUTHOR
